[gd_scene load_steps=9 format=3 uid="uid://dvx4o1jk1hl6o"]

[ext_resource type="Texture2D" uid="uid://dle7xjwtyp3tq" path="res://rm218-bb-07.jpg" id="1_t7pjw"]
[ext_resource type="Script" uid="uid://c74c4xq2eat5" path="res://quests.gd" id="1_xkp6d"]
[ext_resource type="Texture2D" uid="uid://dmkaiqv3m125g" path="res://grunge-black-concrete-textured-background.jpg" id="2_4yalc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yalc"]
bg_color = Color(0.457398, 0, 0.096267, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t7pjw"]
bg_color = Color(0.834914, 0, 0.207902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkp6d"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ib1kl"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhb8r"]
bg_color = Color(0, 0, 0, 1)

[node name="Quests" type="Control" node_paths=PackedStringArray("quest_name", "quest_difficulty", "quest_value")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xkp6d")
quest_name = NodePath("quest/VBoxContainer/HBoxContainer/quest_name")
quest_difficulty = NodePath("quest/VBoxContainer/difficulty")
quest_value = NodePath("quest/VBoxContainer/HBoxContainer/quest_value")
metadata/_edit_lock_ = true

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(577.5, 325)
scale = Vector2(0.236153, 0.1997)
texture = ExtResource("1_t7pjw")
metadata/_edit_lock_ = true

[node name="quest" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -31.0
offset_right = 196.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grunge-black-concrete-textured-background" type="Sprite2D" parent="quest"]
position = Vector2(158, 65.5)
scale = Vector2(0.13134, 0.0349604)
texture = ExtResource("2_4yalc")

[node name="VBoxContainer" type="VBoxContainer" parent="quest"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -168.0
offset_top = 5.0
offset_right = -168.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="quest/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="quest_name" type="Label" parent="quest/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "quest"

[node name="quest_value" type="Label" parent="quest/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "value"

[node name="difficulty" type="Label" parent="quest/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "difficulty"

[node name="Quest_count" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -111.0
offset_top = 31.0
offset_right = -58.0
offset_bottom = 61.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 35
text = "count:"

[node name="TextEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 303.0
offset_top = 156.0
offset_right = 680.0
offset_bottom = 189.0

[node name="text" type="Label" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 148.0
offset_right = 302.0
offset_bottom = 197.0
theme_override_font_sizes/font_size = 28
text = "add custom quest:"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 700.0
offset_top = 155.0
offset_right = 821.0
offset_bottom = 194.0
theme_override_font_sizes/font_size = 22
item_count = 4
popup/item_0/text = "easy"
popup/item_0/id = 0
popup/item_1/text = "medium"
popup/item_1/id = 1
popup/item_2/text = "hard"
popup/item_2/id = 2
popup/item_3/text = "insane"
popup/item_3/id = 3

[node name="add_button" type="Button" parent="."]
layout_mode = 0
offset_left = 508.0
offset_top = 39.0
offset_right = 674.0
offset_bottom = 116.0
theme_override_font_sizes/font_size = 50
text = "ADD"

[node name="confirm_quest" type="Button" parent="."]
layout_mode = 2
offset_left = 859.0
offset_top = 311.0
offset_right = 987.0
offset_bottom = 380.0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.0075636, 0.0051463, 0.00409861, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_4yalc")
theme_override_styles/normal = SubResource("StyleBoxFlat_t7pjw")
text = "done
"

[node name="quest_amount" type="Label" parent="."]
layout_mode = 0
offset_left = 846.0
offset_top = 155.0
offset_right = 943.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_xkp6d")
text = "amount: 1"

[node name="add" type="Button" parent="quest_amount"]
layout_mode = 0
offset_left = 79.0
offset_top = -30.0
offset_right = 106.0
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_ib1kl")
text = "up"

[node name="decrease" type="Button" parent="quest_amount"]
layout_mode = 0
offset_left = 14.0
offset_top = -32.0
offset_right = 62.0
offset_bottom = -2.0
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_rhb8r")
text = "down"

[node name="Menu" type="Button" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 19.0
offset_right = 95.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 25
text = "stats
"

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="add_button" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="confirm_quest" to="." method="_on_confirm_quest_pressed"]
[connection signal="pressed" from="quest_amount/add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="quest_amount/decrease" to="." method="_on_decrease_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
